compiler/fir/analysis-tests/testData/resolve/nestedTypeAliases/localTypeAliasesDisabled.kt
// RUN_PIPELINE_TILL: FRONTEND
// LANGUAGE: -LocalTypeAliases

fun test() {
    <!UNSUPPORTED_FEATURE!>typealias LocalTA = String<!>
}

/* GENERATED_FIR_TAGS: functionDeclaration, typeAliasDeclaration */
